--- a/assets/component-quick-cart-drawer.css
+++ b/assets/component-quick-cart-drawer.css
@@ -311,7 +311,7 @@ quick-cart-drawer .product__price--info {
   font-size: var(--font-size-static-xs);
   line-height: var(--line-height-static-sm);
   font-weight: var(--font-weight-medium);
-  letter-spacing: 0.1rem;
+  letter-spacing: var(--letter-spacing-small);
   text-transform: uppercase;
 }
 
